--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
       <h1 class="title">
         Ceep
       </h1>
-  
+      
       <form class="form" action="">
-        <input class="form-input" type="text">
-        <button class="form-button"> Novo Item </button>
+        <input class="form-input" type="text" data-form-input>
+        <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
       <ul class="list">
-      
+      <li class="task">
+        <p class="content">
+          comprar um abacate
+        </p>
+      </li>
       </ul>
     </div>
+    <script src="listaDeTarefas.js"></script>
 </body>
 </html>
